--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.0",
+    "@stripe/stripe-js": "^2.3.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -20,7 +21,8 @@
     "pg": "^8.11.3",
     "prisma": "^5.8.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^14.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
